--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
+    "react-router-scroll-top": "^0.1.1",
     "react-scripts": "2.1.5",
     "react-transition-group": "^2.6.1",
     "styled-bootstrap-grid": "^3.0.2",
