--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "homepage": "https://dongepulango.github.io/react-kit/",
   "dependencies": {
     "gh-pages": "^2.0.1",
-    "gsap": "^2.1.2",
-    "polished": "^3.0.3",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-scroll-top": "^0.1.1",
-    "react-scripts": "2.1.5",
-    "react-transition-group": "^2.6.1",
-    "styled-bootstrap-grid": "^3.0.2",
-    "styled-components": "^4.1.3"
+    "gsap": "^2.1.3",
+    "polished": "^3.4.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "react-router-scroll-top": "^0.2.1",
+    "react-scripts": "3.0.1",
+    "react-spring": "^8.0.25",
+    "react-transition-group": "^4.1.1",
+    "react-visibility-sensor": "^5.0.2",
+    "styled-bootstrap-grid": "^3.0.3",
+    "styled-components": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
