--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
   "private": true,
   "homepage": "https://dongepulango.github.io/react-kit/",
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "gh-pages": "^2.0.1",
-    "gsap": "^2.1.3",
-    "polished": "^3.4.0",
+    "polished": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-modal": "^3.8.1",
-    "react-router-dom": "^5.0.1",
-    "react-router-scroll-top": "^0.2.1",
-    "react-scripts": "3.0.1",
-    "react-spring": "^8.0.25",
-    "react-transition-group": "^4.1.1",
-    "react-visibility-sensor": "^5.0.2",
-    "styled-bootstrap-grid": "^3.0.3",
-    "styled-components": "^4.3.1"
+    "react-pose": "^4.0.8",
+    "react-pose-text": "^3.1.0",
+    "react-scripts": "^3.0.1",
+    "styled-bootstrap-grid": "^3.0.4",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
