--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "homepage": "https://dongepulango.github.io/react-kit/",
   "dependencies": {
-    "@reach/router": "^1.3.1",
+    "@reach/router": "^1.3.3",
     "gh-pages": "^2.2.0",
     "polished": "^3.4.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
-    "react-scripts": "^3.3.1",
-    "styled-bootstrap-grid": "^3.0.5",
+    "react-scripts": "^3.4.0",
+    "reactide-config": "^1.0.2",
+    "styled-bootstrap-grid": "^3.1.0",
     "styled-components": "^5.0.1"
   },
   "scripts": {
