--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "react-kit",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://dongepulango.github.io/react-kit/",
+  "homepage": "/",
   "dependencies": {
-    "@reach/router": "^1.3.3",
+    "framer-motion": "^1.10.2",
     "gh-pages": "^2.2.0",
     "polished": "^3.4.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-pose": "^4.0.10",
-    "react-pose-text": "^3.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
-    "reactide-config": "^1.0.2",
     "styled-bootstrap-grid": "^3.1.0",
     "styled-components": "^5.0.1"
   },
