--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "react-kit",
+  "name": "wknd",
   "version": "1.0.0",
   "private": true,
   "homepage": "/",
   "dependencies": {
-    "framer-motion": "^1.10.3",
-    "gh-pages": "^2.2.0",
-    "polished": "^3.5.1",
+    "framer-motion": "^1.11.0",
+    "polished": "^3.6.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "styled-bootstrap-grid": "^3.1.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
