--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "wknd",
+  "name": "react-kit",
   "version": "1.0.0",
   "private": true,
   "homepage": "/",
   "dependencies": {
-    "framer-motion": "^1.11.0",
-    "polished": "^3.6.4",
+    "framer-motion": "^2.3.0",
+    "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.2",
     "styled-bootstrap-grid": "^3.1.0",
     "styled-components": "^5.1.1"
   },
