--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "rules": {
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": [
-        "warn", {
+        "warn",
+        {
           "additionalHooks": "useRecoilCallback"
         }
       ]
