--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-headroom": "^3.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "styled-bootstrap-grid": "^3.1.0",
